# ratatui-on-nintendo-switch

./: Cargo.toml  README.md  justfile  rust-toolchain.toml
.cargo/: config.toml
examples/battery-charge/: Cargo.toml
examples/battery-charge/src/: main.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/input/: Cargo.toml
examples/input/src/: main.rs
examples/ratatui-and-mousefood-logos/: Cargo.toml
examples/ratatui-and-mousefood-logos/src/: main.rs
examples/touchscreen/: Cargo.toml
examples/touchscreen/src/: main.rs
src/: main.rs
