[workspace]
resolver = "3"
members = [
    "examples/hello-world",
    "examples/input",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
embedded-graphics-unicodefonts = "0.2"
mousefood = "0.5"
ratatui = { version = "0.30", default-features = false, features = ["all-widgets"] }

[workspace.dependencies.nx]
git = "https://github.com/sermuns/nx"
branch = "embedded-graphics-0.4.1"

[profile.dev]
opt-level = 1
